--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "devDependencies": {
         "@types/node": "*",
         "del-cli": "*",
+        "gaxios": "*",
         "np": "*",
         "ts-node": "*",
         "tslib": "*",
